--- a/java/pom.xml
+++ b/java/pom.xml
@@ -36,6 +36,7 @@
     </parent>
 	
 	<artifactId>jvm-driver</artifactId>
+  <version>0.19.0</version>
 	
 	<packaging>jar</packaging>
 	
@@ -133,7 +134,7 @@
 		<connection>scm:git:${repository.url}</connection>
 		<developerConnection>scm:git:${repository.url}</developerConnection>
 		<url>https://github.com/burningwave/jvm-driver</url>
-		<tag>HEAD</tag>
+		<tag>jvm-driver-0.19.0</tag>
 	</scm>
 	
 	<dependencies>
@@ -219,15 +220,9 @@
                                 <copy toDir="${project.build.directory}/classes/org/burningwave/jvm">
                                 	<fileset dir="${project.basedir}/../native/bin" />
                                 </copy>
-                                <copy file="${project.basedir}/../java-hook/bin/java/lang/ConsulterRetrieverForJDK9.class" 
-                                	tofile="${project.build.directory}/classes/org/burningwave/jvm/ConsulterRetrieverForJDK9.bwc" 
-                                />
-                                <copy file="${project.basedir}/../java-hook/bin/java/lang/reflect/AccessibleSetterInvokerForJDK9.class" 
-                                	tofile="${project.build.directory}/classes/org/burningwave/jvm/AccessibleSetterInvokerForJDK9.bwc" 
-                                />
-                                <copy file="${project.basedir}/../java-hook/bin/jdk/internal/loader/ClassLoaderDelegateForJDK9.class" 
-                                	tofile="${project.build.directory}/classes/org/burningwave/jvm/ClassLoaderDelegateForJDK9.bwc" 
-                                />
+                                <copy file="${project.basedir}/../java-hook/bin/java/lang/ConsulterRetrieverForJDK9.class" tofile="${project.build.directory}/classes/org/burningwave/jvm/ConsulterRetrieverForJDK9.bwc" />
+                                <copy file="${project.basedir}/../java-hook/bin/java/lang/reflect/AccessibleSetterInvokerForJDK9.class" tofile="${project.build.directory}/classes/org/burningwave/jvm/AccessibleSetterInvokerForJDK9.bwc" />
+                                <copy file="${project.basedir}/../java-hook/bin/jdk/internal/loader/ClassLoaderDelegateForJDK9.class" tofile="${project.build.directory}/classes/org/burningwave/jvm/ClassLoaderDelegateForJDK9.bwc" />
                             </target>
                         </configuration>
                     </execution>
