--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>org.burningwave</groupId>
-    <artifactId>jvm-driver-parent</artifactId>
+    <artifactId>jvm-driver</artifactId>
     <version>${revision}</version>
 
     <properties>
