--- a/java/pom.xml
+++ b/java/pom.xml
@@ -133,7 +133,7 @@
 		<connection>scm:git:${repository.url}</connection>
 		<developerConnection>scm:git:${repository.url}</developerConnection>
 		<url>https://github.com/burningwave/jvm-driver</url>
-		<tag>jvm-driver-0.19.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 	
 	<dependencies>
