--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
     <properties>
         <revision>0.19.0-SNAPSHOT</revision>
         <project_jdk_version>9</project_jdk_version>
+        <repository.url>https://burningwave@github.com/burningwave/jvm-driver.git</repository.url>
     </properties>
 
     <packaging>pom</packaging>
