--- a/java/pom.xml
+++ b/java/pom.xml
@@ -29,18 +29,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<parent>
-    	<groupId>org.burningwave.parent</groupId>
-    	<artifactId>jvm-driver</artifactId>
-        <version>${revision}</version>
-    </parent>
-	
 	<groupId>org.burningwave</groupId>
 	<artifactId>jvm-driver</artifactId>
-	<name>Burningwave JVM driver</name>
+	<version>0.19.0-SNAPSHOT</version>
 	
 	<packaging>jar</packaging>
-		
+	
+	<name>Burningwave JVM driver</name>
 	<description>
 		A driver to allow deep interaction with the JVM without any restrictions
 	</description>
