--- a/java/pom.xml
+++ b/java/pom.xml
@@ -31,7 +31,7 @@
 	
 	<groupId>org.burningwave</groupId>
 	<artifactId>jvm-driver</artifactId>
-	<version>0.19.0-SNAPSHOT</version>
+	<version>0.19.0</version>
 	
 	<packaging>jar</packaging>
 	
